2013-02-20  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* tests: Tests updated to deal with the changes to return types and parameters
	of functions caused by the modification of the event functions.

	* file_util.c: Modified the get_event_data functions to return a double array
	instead of a double pointer with the length in the first location. This has
	changed a few functions in other places which read event data, but only small
	changes were required to get things working.

	* estimator_piecewise.c: Fixed bug where when the interval being extended into
	had no events in it the estimator would crash.


2013-02-18  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* generator.c: Old generator functions updated to use the output switch system.

	* launcher.h: Modified usage output to detail the -t switch usage in more depth.
	Each output type is listed for all things which use the data passed to the switch.

	* estimator_delta.c: The -t switch now affects what files are output by the
	delta estimators. 0 outputs nothing, 1 outputs the value computed by the function
	for each guess at delta, 2 outputs lambda and bin data. The hierarchical estimate
	outputs its data to files with "hier" in the name.

2013-02-17  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* estimator.c, general_util.c: Removed duplicated parameter checking function
	from estimator and made the one in general util work.

	* estimator_gaussian.c: Estimators check that the parameter list they receive
	contains the parameters that they require.

	* estimator_delta.c: Restructured delay estimators. Each now has a function which
	extracts parameters from the parameter file and then calls the main function
	which does the calculations. Also added the ability to searching for an
	estimate in a hierarchical fashion, first making a coarse pass over the array
	and then refining the estimate. Functions now also check to make sure that the