@@ -4,9 +4,30 @@ static char* experiment_params[] = {"generator_params", "iwls_params",
 				    "ols_params", "piecewise_params", 
 				    "baseline_params", "test_generator", 
 				    "test_ols", "test_iwls", "test_piecewise",
-				    "test_baseline"};
+				    "test_baseline", "test_gaussian"};
 
-static char* base_strings[] = {"generator", "iwls", "ols", "baseline", "piecewise"};
+static char* base_strings[] = {"generator", "iwls", "ols", "baseline", "piecewise", "gaussian"};
+
+typedef struct
+{
+    char* param_name;
+    double_arr* param_vals;
+} exp_tuple;
+
+typedef struct
+{
+    exp_tuple** data;
+    int len;
+} exp_tuple_arr;
+
+typedef struct
+{
+    exp_tuple_arr** exps;
+    char** exp_names;
+    int len;
+} exp_set;
+
+void print_exp_set(exp_set* set);
 
 void run_experiments(char* exp_paramfile, char* def_paramfile)
 {
@@ -23,24 +44,53 @@ void run_experiments(char* exp_paramfile, char* def_paramfile)
 	exit(1);
     }
 
-    int i;
+    int i,j;
     int missing = 0;
-    
-    
-    for (i = 0; i < sizeof(base_strings)/sizeof(char*); ++i) {
+    int req = 0;
+    int baselen = sizeof(base_strings)/sizeof(char*);
+
+    exp_set* experiment_values = malloc(sizeof(exp_set));
+    experiment_values->exp_names = malloc(baselen * sizeof(char*));
+    experiment_values->exps = malloc(baselen * sizeof(exp_tuple_arr*));
+    experiment_values->len = baselen;
+
+    for (i = 0; i < baselen; ++i) {
 	char teststr[30];
 	char paramstr[30];
 
 	sprintf(teststr, "test_%s", base_strings[i]);
 	sprintf(paramstr, "%s_params", base_strings[i]);
+	experiment_values->exp_names[i] = strdup(teststr);
 		
 	if (strcmp(get_string_param(exp_list, teststr), "yes") == 0){
 	    printf("%s requested. Checking that experimental values are defined.\n", teststr);
-	    string_arr* testparams = string_split(get_string_param(exp_list, paramstr), ',');
-	
-	    if (!has_required_params(exp_list, testparams->data, testparams->len)){
-		missing = 1;
+	    char* p = get_string_param(exp_list, paramstr);
+	    if (p == NULL){
+		printf("Expected parameter %s not defined. Skipping.\n", paramstr);
+		continue;
 	    }
+
+	    string_arr* testparams = string_split(p, ',');
+
+	    if (!has_required_params(exp_list, testparams->data, testparams->len)){
+	    	missing = 1;
+	    } else {
+	    	printf("OK\n");
+	    }
+
+	    experiment_values->exps[i] = malloc(sizeof(exp_tuple_arr));
+	    experiment_values->exps[i]->data = malloc(sizeof(exp_tuple*) * testparams->len);
+	    experiment_values->exps[i]->len = testparams->len;
+	    
+	    for (j = 0; j < testparams->len; ++j) {
+		exp_tuple* etup = malloc(sizeof(exp_tuple));
+		etup->param_name = testparams->data[j];
+		etup->param_vals = parse_param(exp_list, etup->param_name);
+		experiment_values->exps[i]->data[j] = etup;
+	    }
+	    req = 1;
+	} else {
+	    experiment_values->exps[i] = NULL;
 	}
     }
 
@@ -49,83 +99,35 @@ void run_experiments(char* exp_paramfile, char* def_paramfile)
 	       " in %s. Please add them and try again.\n", exp_paramfile);
 	exit(1);
     }
+    if (req == 0){
+	printf("No experiments requested. Exiting.\n");
+	exit(1);
+    }
 
-    /* for (i = 0; i < exp_vars->len; ++i) { */
-    /* 	double_arr* a = parse_param(exp_list, exp_vars->data[i]); */
-    /* 	exp_var_data[i] = a; */
-    /* } */
+    print_exp_set(experiment_values);
+}
+
+void print_exp_set(exp_set* set)
+{
+    int i, j, k;
+
+    printf("%d experiments possible.\n", set->len);
     
-    
-    /* if (strcmp(get_string_param(exp_list, "test_generator"), "yes") == 0){ */
-    /* 	printf("testinggen\n"); */
-    /* 	string_arr* gen_params = string_split(get_string_param(exp_list,"generator_params"), ','); */
-	
-    /* 	if (has_missing_parameters(gen_params, exp_list)){ */
-    /* 	} */
+    for (i = 0; i < set->len; ++i) {
+	if (set->exps[i] == NULL){
+	    printf("No experiment on %s\n", set->exp_names[i]);
+	    continue;
+	}
+	printf("Experiment %d: %s\n", i, set->exp_names[i]);
+	for (j = 0; j < set->exps[i]->len; ++j) {
+	    printf("Parameter %d: %s\nValues:\n", j, set->exps[i]->data[j]->param_name);
+	    for (k = 0; k < set->exps[i]->data[j]->param_vals->len; ++k) {
+		printf("%lf\n", set->exps[i]->data[j]->param_vals->data[k]);
+	    }
 
-    /* } */
-
-    /* if (strcmp(get_string_param(exp_list, "test_ols"), "yes") == 0){ */
-    /* 	printf("testingols\n"); */
-    /* 	string_arr* ols_params = string_split(get_string_param(exp_list,"ols_params"), ','); */
-    /* 		int i; */
-	
-    /* 	for (i = 0; i < ols_params->len; ++i) { */
-    /* 	    printf("%s\n", ols_params->data[i]); */
-    /* 	} */
-    /* } */
-
-    /* if (strcmp(get_string_param(exp_list, "test_iwls"), "yes") == 0){ */
-    /* 	printf("testingiwls\n"); */
-    /* 	string_arr* iwls_params = string_split(get_string_param(exp_list,"iwls_params"), ','); */
-    /* 	int i; */
-	
-    /* 	for (i = 0; i < iwls_params->len; ++i) { */
-    /* 	    printf("%s\n", iwls_params->data[i]); */
-    /* 	} */
-
-    /* } */
-
-    /* if (strcmp(get_string_param(exp_list, "test_piecewise"), "yes") == 0){ */
-    /* 	printf("testingpiece\n"); */
-    /* 	string_arr* piece_params = string_split(get_string_param(exp_list,"piecewise_params"), ','); */
-    /* 	int i; */
-	
-    /* 	for (i = 0; i < piece_params->len; ++i) { */
-    /* 	    printf("%s\n", piece_params->data[i]); */
-    /* 	} */
-	
-    /* } */
-
-    /* if (strcmp(get_string_param(exp_list, "test_baseline"), "yes") == 0){ */
-    /* 	printf("testingbase\n"); */
-    /* 	string_arr* base_params = string_split(get_string_param(exp_list,"baseline_params"), ','); */
-    /* 	int i; */
-	
-    /* 	for (i = 0; i < base_params->len; ++i) { */
-    /* 	    printf("%s\n", base_params->data[i]); */
-    /* 	} */
-	
-    /* } */
-
-    
-    
-    
-    /* int i; */
-    /* double_arr** exp_var_data = malloc(sizeof(double_arr*) * exp_vars->len); */
-
-    /* for (i = 0; i < exp_vars->len; ++i) { */
-    /* 	double_arr* a = parse_param(exp_list, exp_vars->data[i]); */
-    /* 	exp_var_data[i] = a; */
-    /* } */
-
-    /* int_arr* exp_counts = malloc(sizeof(int_arr)); */
-    /* exp_counts->len = exp_vars->len; */
-    /* exp_counts->data = calloc(exp_vars->len, sizeof(int)); */
-    
-    /* for (i = 0; i < exp_counts->len; ++i) { */
-    /* 	printf("%d\n", exp_counts->data[i]); */
-    /* } */
+	}
+	printf("\n");
+    }
 }
 
 /*
